2016-05-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_macro_command_line): Order of 
	error messages changed.

2016-05-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@acronym, @abbr>: Don't
	set 'explained_commands' hash or 'explanation_contents' extra 
	value on elements.
	* tp/Texinfo/Convert/HTML.pm (_convert_explained_command): Move 
	the code for keeping track of previous acronym explanations
	here.

2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@novalidate>,
	* texi2any.pl <option processing>,
	* tp/Texinfo/Structuring.pm (nodes_tree)
	(associate_internal_references),
	* tp/Texinfo/Common.pm (%default_parser_state_configuration): 
	Use $self->{'info'}->{'novalidate'} instead of
	$self->{'novalidate'}.  Delete some commented-out code.

2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\indexnofontsvalue): New definition for a 
	@value when expanded in an index entry sort key.
	(\indexnofonts): Call it.
	(\dummyvalue): If @value is undefined, pass through an 
	unexpanded @value command to the auxiliary file.

2016-05-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\commondummies): Move definitions of 
	\definedummyword, \definedummyletter, \definedummyaccent out of 
	\commondummies.  Reorder a comment to put content about control 
	words next to content about \definedummyword.  Rename this macro 
	\definedummies, to reduce confusion with \commondummiesnofonts.

	(\commondummiesnofonts): Use different names for the parameters.
	Add a comment saying what is listed here.

2016-05-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Test of auxiliary files): Note 
	where cross-references should definitely work.  Add section 
	testing `-' and `_' in a @value.

2016-05-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\setref): Give \value a definition to match 